--- a/LabManager/wwwroot/css/site.css
+++ b/LabManager/wwwroot/css/site.css
@@ -54,3 +54,23 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+  /*---------------------------------------------------*/
+  /* Chemicals List (Table) */
+
+.chemicals-table 
+{
+    width: 70%;
+    border: dashed;
+}
+
+.chemicals-table-row 
+{
+
+}
+
+.chemicals-table-header
+{
+
+}
+
