labthings controller refactored with if/else statements for sorting

--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -11,9 +11,9 @@
     <a asp-action="Create">Create New LabThing</a>
 </p>
 @************************************************************************************************@
-@*Search box and filter for Chemical Index() *@
+@*Search box and filter for LabThing Index() *@
 
-<form asp-action="Index" method="get">
+@*<form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <p>
             Search: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
@@ -21,7 +21,7 @@
             <a asp-action="Index">Back to Inventory List</a>
         </p>
     </div>
-</form>
+</form>*@
 @************************************************************************************************@
 
 <table class="table">
