login now routes to home

--- a/LabManager/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LabManager/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,13 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary"
+                            asp-action="Index" asp-controller="Home">
+                        Log in
+                    </button>
+
+                    @*asp-controller="Home" asp-action="Index"*@
+
                 </div>
                 <div class="form-group">
                     <p>
