--- a/LabManager/Views/Home/Index.cshtml
+++ b/LabManager/Views/Home/Index.cshtml
@@ -1,7 +1,20 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome To LabManager!</h1>
+
+    <a class="chemicals-link">
+        <img src="~/images/beaker.png" />
+        V
+    </a>
+
 </div>
+
+<p>
+    Image Credits:
+    @*beaker.png:*@
+    <div>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</p>
