--- a/LabManager/Views/LabThings/Index.cshtml
+++ b/LabManager/Views/LabThings/Index.cshtml
@@ -207,7 +207,7 @@
             <td class="table-data">
                 @Html.DisplayFor(modelItem => item.Manufacturer.Name)
             </td>
-            <td class="table-button-group">
+            <td class="labthing-table-button-group">
                 <a asp-action="Edit" asp-route-id="@item.ID">
                     <img src="~/images/baseline_edit_black_sm.png" alt="EditIcon"/></a> |
                 <a asp-action="Details" asp-route-id="@item.ID">
